--- a/YusupovHotel/Pages/AllBookingPage.razor
+++ b/YusupovHotel/Pages/AllBookingPage.razor
@@ -11,16 +11,19 @@
             <div class="modal-content">
                 <div class="modal-header text-center">
                     <h4 class="modal-title w-100 font-weight-bold">Бронирование номера</h4>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" >
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" @onclick="ClaerBookingForm">
                     </button>
                 </div>
+
+                <EditForm Model="@bookModel" class="formRegistr" OnValidSubmit="@Submit">
+                    <DataAnnotationsValidator />
                     <div class="modal-body mx-3">
                     <div class="md-form mb-5">
                         <iconify-icon icon="material-symbols:person"></iconify-icon>
                         <div id="inputBox" class="inputBoxClients">
-                            <input class="fas fa-envelope prefix grey-text" type="text" @bind="nameClient" @bind:event="oninput" @onkeyup="SearchingForSelect" required="required">
+                                <input class="fas fa-envelope prefix grey-text" type="text" @bind="nameClient" @bind:event="oninput" @onfocus="OpenClientList" @onkeyup="SearchingClientForSelect" required="required">
                             <span id="span">Клиент</span>
-                            <div class="dropdownClients">
+                                <div class="dropdownClients" style="display:@clientsSearch;">
                                 @foreach (var client in sortingClients)
                                 {
                                     <a @onclick="() => SelectCleint(client)">@client.ClientName</a>
@@ -31,21 +34,21 @@
                     <div class="md-form mb-5">
                         <iconify-icon icon="pepicons-pop:persons"></iconify-icon>
                         <div id="inputBox">
-                            <input @bind=adaltCnt type="text" class="fas fa-envelope prefix grey-text" required="required" onkeyup="this.value = this.value.replace(/[^0-9]/ig, '')" />
+                                <InputNumber @bind-Value="bookModel.AdaltCount" class="fas fa-envelope prefix grey-text" required="required" @onfocusout="GetRoomForPeopleCount" />
                             <span id="span">Кол-во взрослых</span>
                         </div>
                     </div>
                     <div class="md-form mb-5">
                         <iconify-icon icon="pepicons-pop:persons" ></iconify-icon>
                         <div id="inputBox">
-                            <input @bind=childeCnt type="text" class="fas fa-envelope prefix grey-text" required="required" onkeyup="this.value = this.value.replace(/[^0-9]/ig, '')" />
+                                <InputNumber @bind-Value="bookModel.ChildCount" class="fas fa-envelope prefix grey-text" @onfocusout="GetRoomForPeopleCount" required="required" />
                             <span id="span">Кол-во детей</span>
                         </div>
                     </div>
                         <div class="md-form mb-5">
                         <iconify-icon icon="icon-park-twotone:hotel-please-clean" style="top: 7px;"></iconify-icon>
                             <div class="typeList" >
-                            <select @bind="roomType" @onclick="GetRoomWithSelectType" required="required"
+                            <InputSelect @bind-Value="roomType" @onclick="GetRoomWithSelectType" required="required"
                                 class="dropdown" style="outline:none; outline-style:none">
                                 <option selected disabled></option>
                                 <option value="Стандарт">Стандарт</option>
@@ -53,42 +56,47 @@
                                 <option value="Люкс одноместный">Люкс одноместный</option>
                                 <option value="Люкс однокомнатный">Люкс двухкомнатный</option>
                                 <option value="Люкс премиум">Люкс премиум</option>
-                                </select>
+                                </InputSelect>
                                 <span id="span">Тип номера</span>
                             </div>
                         </div>
                     <div class="md-form mb-5">
                         <iconify-icon icon="ic:baseline-calendar-month"></iconify-icon>
                         <div id="inputBox">
-                            <input name="date" id="from" @bind="chekInDate" @onclick="JsInvoce" type="text" onfocus="(this.type='date')" onblur="if(!this.value)this.type='text'">
+                                <input name="date" id="from" @bind="chekInDate" @onfocusout="GetRoomWithoutBooking" type="text" onfocus="(this.type='date')" onblur="if(!this.value)this.type='text'" />
                             <span id="span">Дата заезда</span>
                         </div>
                     </div>
                     <div class="md-form mb-5">
                         <iconify-icon icon="ic:baseline-calendar-month"></iconify-icon>
                         <div id="inputBox">
-                            <input name="date" id="to" @bind="chekOutDate" type="text" onfocus="(this.type='date')" onblur="if(!this.value)this.type='text'">
+                            <input name="date" id="to" @bind="chekOutDate" type="text" onfocus="(this.type='date')" onblur="if(!this.value)this.type='text'" />
                             <span id="span">Дата выезда</span>
                         </div>
                     </div>
                     <div class="md-form mb-5">
                         <iconify-icon icon="tabler:number" style="top:9px"></iconify-icon>
                             <div class="typeList" >
-                            <select @bind="roomNumber" required="required"
+                            <InputSelect @bind-Value="roomNumber" required="required"
                                 class="dropdown" style="outline:none; outline-style:none">
                                 <option selected disabled></option>
-                                @foreach (var room in sortingRooms)
-                                {
-                                    <option value="@room.Number">@room.Number</option>
-                                }
-                                </select>
+                                    @if(sortingRooms != null)
+                                    {
+                                        @foreach (var room in sortingRooms)
+                                        {
+                                            <option value="@room.Number">@room.Number</option>
+                                        }
+                                    }
+                                </InputSelect>
                                 <span id="span">Номер</span>
                             </div>
                         </div>
+
                     </div>
                     <div class="modal-footer d-flex justify-content-center">
                     <button class="btn btn-default btn-success" type="submit" data-bs-dismiss="modal" @onclick="Submit">Добавить</button>
                     </div>
+                    </EditForm>
             </div>
         </div>
         </div>
@@ -136,15 +144,12 @@
     List<Client> clients = new List<Client>();
     List<Client> sortingClients = new List<Client>();
     Booking bookModel = new Booking();
+    string clientsSearch = "none";
     string search = "";
     string nameClient = "";
     string chekInDate = "";
     string chekOutDate = "";
     Client client;
-    string adaltCnt = "";
-    string childeCnt = "";
-    //string nameClient = "";
-    //string nameClient = "";
     string roomNumber;
     string roomType = "";
     bool wasSubmitted;
@@ -181,27 +186,32 @@
     private void AddNewBook()
     {
         var room = Mongo.GetRoom(int.Parse(roomNumber));
-        int year = int.Parse(chekInDate.Split('-')[0]);
-        int mounth = int.Parse(chekInDate.Split('-')[1]);
-        int day = int.Parse(chekInDate.Split('-')[2]);
-        var arrivalDate = new DateOnly(year, mounth, day);
-        int year1 = int.Parse(chekOutDate.Split('-')[0]);
-        int mounth1 = int.Parse(chekOutDate.Split('-')[1]);
-        int day1 = int.Parse(chekOutDate.Split('-')[2]);
-        var departureDate = new DateOnly(year1, mounth1, day1);
-        var price = Convert.ToDouble(room.Cost) * int.Parse(((departureDate.Day - arrivalDate.Day)).ToString());
-        Booking newBook = new Booking(room, client, int.Parse(adaltCnt), int.Parse(childeCnt), arrivalDate, departureDate, price);
+        var arrivalDate = GetDate(chekInDate);
+        var departureDate = GetDate(chekOutDate);
+        var price = Convert.ToDouble(room.Cost) * int.Parse(((arrivalDate.Day - departureDate.Day)).ToString());
+        var newBook = new Booking(room, client, (int)bookModel.AdaltCount, (int)bookModel.ChildCount, arrivalDate, departureDate, price);
         Mongo.AddBookingToDB(newBook);
         bookings.Add(newBook);
         SearchingForBook();
     }
 
-    
+    private DateOnly GetDate(string date)
+    {
+        int year = int.Parse(date.Split('-')[0]);
+        int mounth = int.Parse(date.Split('-')[1]);
+        int day = int.Parse(date.Split('-')[2]);
+        return new DateOnly(year, mounth, day);
+    }
 
     private void OpenCurrentBooking(Booking booking)
     {
         servise.booking = booking;
         manager.NavigateTo("booking");
+    }
+
+    private void SortingRooms()
+    {
+
     }
 
     private void GetRoomWithSelectType()
@@ -211,12 +221,48 @@
         .ToList();
     }
 
-    private void SearchingForSelect()
+    private void GetRoomWithoutBooking()
+    {
+        List<Room> list = new();
+        foreach (var room in sortingRooms)
+        {
+            if (bookings.Find((book) => book.Room == room && book.DepartureDate <= GetDate(chekInDate)) != null) continue;
+            else list.Add(room);
+
+        }
+
+        //bookings.Where((element) =>
+        //    element.DepartureDate >= GetDate(chekInDate) || )
+        //.ToList();
+
+        //for(int i = 0; i < list.Count; i++)
+        //{
+        //    if(sortingRooms[i] == list[i].Room)
+        //    {
+        //        if (list[i].DepartureDate < GetDate(chekInDate))
+        //        {
+        //            newList.Add(sortingRooms[i]);
+        //        }
+        //    }
+        //}
+        sortingRooms = list;
+    }
+
+    private void GetRoomForPeopleCount()
+    {
+        sortingRooms = rooms.Where((element) =>
+            element.Capacity >= bookModel.AdaltCount + bookModel.ChildCount)
+        .ToList();
+    }
+
+    private void SearchingClientForSelect()
     {
         sortingClients = clients.Where((element) =>
             element.ClientName.ToLower().Contains(nameClient.ToLower()))
         .ToList();
     }
+
+
 
     private void SearchingForBook()
     {
@@ -225,10 +271,27 @@
         .ToList();
     }
 
+    private void OpenClientList()
+    {
+        clientsSearch = "block";
+    }
+
     private void SelectCleint(Client selectedClient)
     {
+        clientsSearch = "none";
         nameClient = selectedClient.ClientName;
         client = selectedClient;
+    }
+
+    private void ClaerBookingForm()
+    {
+        nameClient = string.Empty;
+        bookModel.AdaltCount = 0;
+        bookModel.ChildCount = 0;
+        roomType = string.Empty;
+        chekInDate = string.Empty; 
+        chekOutDate = string.Empty;
+        roomNumber = string.Empty;
     }
 }
 
