--- a/YusupovHotel/Pages/AllBookingPage.razor
+++ b/YusupovHotel/Pages/AllBookingPage.razor
@@ -144,6 +144,9 @@
     List<Client> clients = new List<Client>();
     List<Client> sortingClients = new List<Client>();
     Booking bookModel = new Booking();
+    bool isRoomTypeSortON;
+    bool isClientCountSortON;
+    bool isDateSortON;
     string clientsSearch = "none";
     string search = "";
     string nameClient = "";
@@ -224,12 +227,19 @@
     private void GetRoomWithoutBooking()
     {
         List<Room> list = new();
-        foreach (var room in sortingRooms)
+        foreach (var room in rooms)
         {
-            if (bookings.Find((book) => book.Room == room && book.DepartureDate <= GetDate(chekInDate)) != null) continue;
+            var temp = bookings.FirstOrDefault((element) => element.Room.Number == room.Number);
+            if(temp != null)
+            {
+                if (temp.DepartureDate < GetDate(chekInDate))
+                {
+                    list.Add(room);
+                }   
+            }
             else list.Add(room);
-
         }
+        sortingRooms = list;
 
         //bookings.Where((element) =>
         //    element.DepartureDate >= GetDate(chekInDate) || )
@@ -245,7 +255,6 @@
         //        }
         //    }
         //}
-        sortingRooms = list;
     }
 
     private void GetRoomForPeopleCount()
