--- a/YusupovHotel/Shared/MainLayout.razor
+++ b/YusupovHotel/Shared/MainLayout.razor
@@ -6,6 +6,10 @@
 <PageTitle>YusupovHotel</PageTitle>
 
 <div class="page" >
+    @if (servise.user == null)
+    {
+        
+    }
     <div class="sidebar" id="nav-bar-id" >
             <NavMenu />
         </div>
