--- a/YusupovHotel/Pages/AllRoomsPage.razor
+++ b/YusupovHotel/Pages/AllRoomsPage.razor
@@ -63,7 +63,7 @@
                         <iconify-icon icon="ic:twotone-price-check"></iconify-icon>
                         <div id="inputBox">
                             <InputNumber TValue="double?" class="fas fa-envelope prefix grey-text" required="required" prefix="" @bind-Value="roomModel.Cost" />
-                            <span id="span">Цены за ночь</span>
+                            <span id="span">Цена за ночь</span>
                             <span style="margin-top: -4px"><ValidationMessage For="() => roomModel.Cost" /></span>
                         </div>
                     </div>
