--- a/YusupovHotel/Pages/_Host.cshtml
+++ b/YusupovHotel/Pages/_Host.cshtml
@@ -18,3 +18,5 @@
 <script src="~/js/lightbox-plus-jquery.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 <script src="~/_content/BlazorInputFile/inputfile.js"></script>
+<script src="~/_content/BlazorDateRangePicker/clickAndPositionHandler.js"></script>
+<link rel="stylesheet" href="~/_content/BlazorDateRangePicker/daterangepicker.min.css" />
