--- a/YusupovHotel/Shared/NavMenu.razor
+++ b/YusupovHotel/Shared/NavMenu.razor
@@ -1,7 +1,7 @@
 ﻿<div id="logo">
     <div class="container-fluid" >
         <img src="\images\logo.png">
-        <a class="navbar-brand" style="color: white" href="clients">YusupovHotel</a>
+        <a class="navbar-brand" style="color: white" href="bookings">YusupovHotel</a>
     </div>
 </div>
 
@@ -9,7 +9,7 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="bookings">
-                <span class="oi oi-plus" aria-hidden="true"></span> Бронирование*
+                <span class="oi oi-bell" aria-hidden="true"></span> Бронирование
             </NavLink>
         </div>
         <div class="nav-item px-3">
